# dissertation

./: .gitignore  abstract.typ  acknowledgements.typ  acm-sig-proceedings.csl  acronyms.typ  adpp.tex  adpp.typ  algorithmic.typ  bellman-update-networks.typ  bug.typ  conclusion.typ  dedication.typ  flake.nix  introduction.typ  main.bib  main.typ  math.typ  natbib-plainnat-author-date.csl  package.json  plot.ipynb  policy-iteration.typ  pull_data.ipynb  pyproject.toml  style.typ
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 6ilxcd3gqx1vbhq024qcyxx32xr9b5d7-source  ibgqyysrnhlgzajjy2fq7mn4clijfsgm-source
data/: delta_100_omit_states_actions_0.json  delta_100_omit_states_actions_26.json  delta_100_omit_states_actions_52.json  delta_1_omit_states_actions_0.json  delta_1_omit_states_actions_26.json  delta_1_omit_states_actions_52.json  delta_2_omit_states_actions_0.json  delta_2_omit_states_actions_26.json  delta_2_omit_states_actions_52.json  delta_3_omit_states_actions_0.json  delta_3_omit_states_actions_26.json  delta_3_omit_states_actions_52.json
figures/adpp/: cheetah-dir.ipynb  cheetah-vel.ipynb  point-env.ipynb
figures/bellman-update-networks/: bootstrap-rmse.ipynb  download_artifacts.py  download_miniworld.py  download_miniworld2.py  grid-world.ipynb  miniworld.ipynb  miniworld2.ipynb  no-walls.ipynb  no-walls2.ipynb  teddy.ipynb  walls.ipynb  walls2.ipynb
figures/bellman-update-networks/artifacts/run-0sds7bw5-history:v0/: 0000.parquet
pkgs/typst-preview/: package.nix
(+520 files in other folders)
