[tool.poetry]
name = "dissertation"
version = "0.1.0"
description = ""
authors = ["ethanabrooks <ethanabrooks@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
wandb = "^0.16.1"
seaborn = "^0.13.0"
altair = "^5.2.0"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
ipdb = "^0.13.9"
ipython = "^8.4.0"
flake8 = "^5.0.4"
pre-commit = "^3.2.2"
jupyterlab = "^4.0.9"
jupytext = "^1.16.0"
ipyflow = "^0.0.192"
ipykernel = "^6.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
